tests/rosetta/out/Java/count-in-factors.error
javac: exit status 1
/tmp/CountInFactors.java:19: error: incompatible types: int cannot be converted to String
                m = (int)(Integer.parseInt((m / f)));
                                              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
