tests/rosetta/out/Java/count-in-factors.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// count-in-factors.mochi
import java.util.*;

public class CountInFactors {
    static void show(int n) {
        if (n == 1) {
            System.out.println("1: 1");
            return ;
        }
        String out = String.valueOf(n) + ": ";
        String x = "";
        int m = n;
        int f = 2;
        while (m != 1) {
            if (Objects.equals(m % f, 0)) {
                out = out + x + String.valueOf(f);
                x = "×";
                m = (int)(Integer.parseInt((m / f)));
            }
            else {
                f = (int)(f + 1);
            }
        }
        System.out.println(out);
    }
    public static void main(String[] args) {
        show(1);
        for (int i = 2; i < 10; i++) {
            show(i);
        }
        System.out.println("...");
        for (int i = 2144; i < 2155; i++) {
            show(i);
        }
        System.out.println("...");
        for (int i = 9987; i < 10000; i++) {
            show(i);
        }
    }
}
